# scademorepo

./: README.md
cran-basic/: DESCRIPTION
cran-basic/R/: analysis.R
crates-basic/: Cargo.toml
crates-basic/src/: main.rs
crates-chrono-transitive/: Cargo.toml
crates-chrono-transitive/src/: lib.rs
go-basic/: go.mod  go.sum  main.go
gradle-springboot-actuator/: build.gradle
gradle-springboot-actuator/src/main/java/com/northbeam/billing/: BillingApplication.java
hackage-basic/: Main.hs  sca-test.cabal  service-monitor.cabal
hex-basic/: mix.exs
hex-basic/lib/hex_basic/: router.ex
maven-basic/: pom.xml
maven-basic/src/main/java/com/northbeam/inventory/: Application.java
maven-gradle/: build.gradle
maven-gradle/src/main/java/com/northbeam/gateway/: InventoryIntakeController.java  WebService.java
maven-springboot-mongo/: pom.xml
maven-springboot-mongo/src/main/java/com/northbeam/indexer/: IndexerApplication.java
npm-basic/: package.json  server.js
npm-lockfile/: app.js  package-lock.json  package.json
npm-scoped/: package.json  transform.js
nuget-basic/: DocumentHub.csproj  Program.cs  ScaTest.csproj
nuget-restsharp-transitive/: Program.cs  RestClient.csproj
packagist-basic/: composer.json  index.php
pub-basic/: pubspec.yaml
pub-basic/lib/: main.dart
pypi-basic/: app.py  requirements.txt
pypi-flask-transitive/: app.py
pypi-pipfile/: Pipfile
pypi-pipfile/catalog/: views.py
pypi-pipfile/config/: settings.py
pypi-pyproject/: pyproject.toml
pypi-pyproject/src/: main.py
rubygems-basic/: Gemfile  app.rb
